<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lu.ctg.mcq.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
		<TextView
            android:id="@+id/mcqGroupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_choose_group" />
		<lu.ctg.mcq.MultiSpinner 
	        android:id="@+id/groupSpinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:text="@string/main_choose_nbr_questions" />
        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>
    
    <CheckBox
        android:id="@+id/suffleCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/main_choose_shuffle" />

    <Button
        android:id="@+id/button1"
        style="@style/mcq_button_style"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:background="@drawable/mcq_button"
        android:onClick="startMCQ"
        android:text="@string/main_start_button" />

</LinearLayout>
